@@ -67,6 +67,7 @@ All (GUI):
 - Allow requesting modern (3.x+) OpenGL version in wxGLCanvas (Fabio Arnold).
 - Allow customizing window shown by wxBusyInfo.
 - Add wxAddRemoveCtrl.
+- Add wxAppProgressIndicator for MSW (Chaobin Zhang) and OS X (Tobias Taschner).
 - Add wxEVT_MAGNIFY mouse event (Joost Nieuwenhuijse).
 - Make results of wxDC::DrawEllipticArc() consistent across all platforms.
 - XRC handler for wxAuiToolBar added (Kinaou Hervé, David Hart).
